Fix VE z-index issues

--- a/resources/skin.less
+++ b/resources/skin.less
@@ -524,7 +524,6 @@ main {
 .content {
   &__header {
     position: relative;
-    z-index: 1;
   }
 
   &__heading {
